# Car

./: README.md
Ejercicio1/: main.c
Ejercicio1/include/: Ejercicio1.h
Ejercicio1/src/: Ejercicio1.c
Ejercicio2/: CMakeLists.txt  main.c  prueba.c
Ejercicio2/include/: funciones.h
Ejercicio2/src/: funciones.c
Ejercicio3/: main.c  prueba.c
Ejercicio3/include/: funciones.h
Ejercicio3/src/: funciones.c
Practica1/: CMakeLists.txt  README.md  main.c
Practica1/Ejercicio3/include/: funciones.h
Practica1/Ejercicio3/src/: funciones.c
Practica1/src/: Ejercicio1.c
Practica2/: Practica2_ByN.ipynb  Práctica2_NUMBA_ByN.ipynb
